[FIX]modal: button were not showing in calendar
bzr revid: csn@openerp.com-20140416151543-im41f9rpqj6ll742

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -2720,6 +2720,8 @@ body.oe_single_form
         font-size: 20px
     .modal-footer
         text-align: left
+    .oe_button
+        margin: 0 4px 0 0
     .oe_act_window.modal-body
         padding: 0
 
